# arcade-mcp

./: # Windows Papercuts Project - Handoff Do.md  .dependency-cruiser.cjs  .env.example  .gitignore  .graphifyignore  .pre-commit-config.yaml  .prettierignore  .ruff.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  ERROR_MESSAGES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  SECURITY.md  SMART_CRITIC_COMPARISON.md  SMART_CRITIC_MODEL_BENCHMARK.md  TESTING_ERROR_MESSAGES.md  activate.sh  demo_error_messages.py  eslint.config.mjs  hello-world.md  knip.json  package-lock.json  package.json  pyproject.toml  pytest.ini  sample_tool_call.py  worker.toml
.cursor/: versioning.mdc
.safeword/: config.json  (+2 more)
arcade/arcade/templates/{{ toolkit_name }}/: Makefile  README.md  REFERENCE.md  pyproject.toml  {{ toolkit_name }}.py
arcade/arcade/templates/{{ toolkit_name }}/.github/actions/setup-poetry-env/: action.yml
arcade/arcade/templates/{{ toolkit_name }}/.github/workflows/: main.yml  publish-to-pypi.yml
arcade/arcade/templates/{{ toolkit_name }}/evals/: eval_{{ toolkit_name }}.py
arcade/arcade/templates/{{ toolkit_name }}/tests/: test_{{ toolkit_name }}.py
contrib/langchain/: Makefile  README.md  pyproject.toml
contrib/langchain/examples/: README.md  env.example  research_agent.py
contrib/langchain/langchain_arcade/: __init__.py  _utilities.py  manager.py
contrib/langchain/tests/: test_manager.py
examples/flask/: app.py  pyproject.toml
examples/mcp_servers/custom_server_with_prebuilt_tools/: README.md  pyproject.toml  server.py
examples/mcp_servers/datacache/: README.md  pyproject.toml
examples/mcp_servers/datacache/src/datacache/: __init__.py  server.py
examples/mcp_servers/logging/: pyproject.toml
examples/mcp_servers/logging/docker/: docker-compose.yml
examples/mcp_servers/pctx_code_mode/: README.md  pyproject.toml
examples/mcp_servers/pctx_code_mode/docker/: Dockerfile  docker-compose.yml
examples/mcp_servers/pctx_code_mode/src/pctx_code_mode/: params.py  server.py  store.py
examples/mcp_servers/sampling_with_tools/: README.md  pyproject.toml
examples/mcp_servers/sampling_with_tools/src/sampling_with_tools/: server.py
examples/mcp_servers/simple/: pyproject.toml
examples/mcp_servers/simple/src/simple/: server.py
examples/mcp_servers/simple_server/: pyproject.toml  server.py
examples/mcp_servers/telemetry_passback/: .env.example  README.md  pyproject.toml
examples/mcp_servers/telemetry_passback/src/telemetry_passback/: agent.py  server.py
examples/mcp_servers/tools_with_output_schema/: .env.example  pyproject.toml
examples/mcp_servers/tools_with_output_schema/src/tools_with_output_schema/: server.py
examples/mcp_servers/typed_errors/: README.md  pyproject.toml
examples/mcp_servers/typed_errors/src/typed_errors/: server.py
examples/mcp_servers/user_elicitation/: pyproject.toml
libs/arcade-cli/: README.md  pyproject.toml
libs/arcade-cli/arcade_cli/: authn.py  config.py  configure.py  connect.py  console.py  constants.py  context_box_client.py  ctx.py  deploy.py  deploy_server.py  deployment.py  display.py  evals_runner.py  main.py  new.py  org.py  project.py  secret.py  serve.py  server.py  show.py  types.py  update.py  utils.py  worker.py
libs/arcade-cli/arcade_cli/formatters/: __init__.py  base.py  html.py  json.py  markdown.py  text.py
libs/arcade-cli/arcade_cli/templates/full/{{ toolkit_name }}/: .gitignore  Makefile  README.md  pyproject.toml
libs/arcade-cli/arcade_cli/templates/full/{{ toolkit_name }}/evals/: eval_{{ toolkit_name }}.py
libs/arcade-cli/arcade_cli/templates/full/{{ toolkit_name }}/tests/: test_{{ toolkit_name }}.py
libs/arcade-cli/arcade_cli/templates/full/{{ toolkit_name }}/{{ package_name }}/: __init__.py  __main__.py
libs/arcade-cli/arcade_cli/templates/full/{{ toolkit_name }}/{{ package_name }}/tools/: sample.py
libs/arcade-cli/arcade_cli/templates/minimal/{{ toolkit_name }}/: pyproject.toml  server.py
libs/arcade-cli/arcade_cli/templates/minimal/{{ toolkit_name }}/{{ toolkit_name }}/: tools.py
libs/arcade-cli/arcade_cli/templates/{{ toolkit_name }}/: Makefile  README.md  pyproject.toml
libs/arcade-cli/arcade_cli/toolkit_docs/: __init__.py  docs_builder.py  templates.py  utils.py
libs/arcade-cli/arcade_cli/usage/: __main__.py  command_tracker.py  constants.py  identity.py  usage_service.py  utils.py
toolkits/arcade_expert/: Makefile  pyproject.toml
toolkits/arcade_expert/arcade_arcade_expert/: models.py
toolkits/arcade_expert/arcade_arcade_expert/tools/: __init__.py  search_documentation.py
toolkits/arcade_expert/evals/: eval_arcade_expert.py
toolkits/arcade_expert/tests/: test_models.py
toolkits/freshservice_v1_api/: pyproject.toml  server.py
toolkits/linkedin/: Makefile  conftest.py  pyproject.toml
toolkits/linkedin/arcade_linkedin/: __main__.py
toolkits/linkedin/arcade_linkedin/tools/: share.py  utils.py
toolkits/linkedin/evals/: eval_linkedin.py
toolkits/linkedin/mcp_building_evals_results/: results.html  results.json  results.md  results.txt
toolkits/linkedin/tests/: test_share.py
toolkits/local_file_management/: pyproject.toml
toolkits/local_file_management/arcade_local_file_management/tools/: terminal.py
toolkits/perplexity/: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
toolkits/perplexity/arcade_perplexity/: __init__.py  __main__.py
toolkits/perplexity/arcade_perplexity/tools/: __init__.py  search.py
toolkits/perplexity/tests/: test_search.py
toolkits/posthog/: .pre-commit-config.yaml  Makefile  conftest.py  pyproject.toml
toolkits/posthog/arcade_posthog/: __init__.py  __main__.py  _helpers.py
toolkits/posthog/arcade_posthog/tools/: __init__.py  analytics.py  connection.py  dashboards.py  discovery.py  errors.py  experiments.py  feature_flags.py  insights.py  organizations.py  queries.py  surveys.py
toolkits/posthog/evals/: eval_posthog.py
toolkits/posthog/tests/: test_analytics.py  test_connection.py  test_dashboards.py  test_feature_flags.py  test_helpers.py
(+3756 files in other folders)
