[tool.poetry]
name = "langchain-arcade"
version = "0.1.1"
description = "An integration package connecting Arcade AI and LangChain/LangGraph"
authors = ["Arcade AI <dev@arcade-ai.com>"]
readme = "README.md"
repository = "https://github.com/arcadeai/arcade-ai/tree/main/contrib/langchain"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.12.4"
langchain-core = "^0.3.0"
arcadepy = "~0.1.1"
langgraph = {version = ">=0.2.32,<0.3.0", optional = true}

[tool.poetry.extras]
langgraph = ["langgraph"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.2"
pytest-cov = "^4.0.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"
pytest-asyncio = "^0.23.7"
types-toml = "^0.10.8"
types-pytz = "^2024.1"
types-python-dateutil = "^2.8.2"
types-PyYAML = "^6.0.0"
poetry-plugin-export = "^1.7.0"

[tool.poetry.scripts]
arcade = "arcade.cli.main:cli"

[tool.mypy]
files = ["arcade"]
python_version = "3.10"
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
ignore_missing_imports = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.coverage.run]
branch = true
source = ["arcade"]
omit = ["arcade/cli/*"]

[tool.coverage.report]
skip_empty = true
