[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "langchain-arcade"
version = "2.0.0"
description = "This package is no longer maintained. Please visit https://docs.arcade.dev for the latest Arcade integrations."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["deprecated", "arcade", "langchain"]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://docs.arcade.dev"
Documentation = "https://docs.arcade.dev"
Repository = "https://github.com/arcadeai/arcade-mcp"

[tool.hatch.build.targets.wheel]
packages = ["langchain_arcade"]
