[tool.poetry]
name = "arcade_example_flask"
version = "0.1.0"
description = "Flask example app"
authors = ["Nate <nate@arcade-ai.com>"]


[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
