[project]
name = "arcade-cli"
version = "0.1.0"
description = "Arcade CLI - Command-line interface for Arcade platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Arcade", email = "dev@arcade.dev"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.7.1",
    "Jinja2>=3.1.5,<4.0.0",
    "arcadepy>=1.3.1",
    "tqdm>=4.1.0",
    "openai>=1.36.0",
    "click<8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.2",
    "pytest-cov>=4.0.0",
    "mypy>=1.5.1",
    "pre-commit>=3.4.0",
    "pytest-asyncio>=0.23.7",
]

[project.scripts]
arcade = "arcade_cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arcade_cli"]

[tool.mypy]
files = ["arcade_cli"]
python_version = "0.1.0"
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true
