[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "arcade_linkedin"
version = "0.2.0"
description = "Arcade.dev LLM tools for LinkedIn"
requires-python = ">=3.10"
dependencies = [
    "arcade-mcp-server>=1.17.0,<2.0.0",
    "httpx>=0.27.2,<1.0.0",
]
[[project.authors]]
name = "Arcade"
email = "dev@arcade.dev"

[project.scripts]
arcade-linkedin = "arcade_linkedin.__main__:main"
arcade_linkedin = "arcade_linkedin.__main__:main"

[project.optional-dependencies]
dev = [
    "arcade-mcp[all]>=1.2.0,<2.0.0",
    "pytest>=8.3.0,<8.4.0",
    "pytest-cov>=4.0.0,<4.1.0",
    "pytest-asyncio>=0.24.0,<0.25.0",
    "pytest-mock>=3.11.1,<3.12.0",
    "mypy>=1.5.1,<1.6.0",
    "pre-commit>=3.4.0,<3.5.0",
    "tox>=4.11.1,<4.12.0",
    "ruff>=0.7.4,<0.8.0",
]

# Use local path sources for arcade libs when working locally
[tool.uv.sources]
arcade-mcp = {path = "../../", editable = true}
arcade-mcp-server = { path = "../../libs/arcade-mcp-server/", editable = true }

[tool.mypy]
files = [ "arcade_linkedin/**/*.py",]
python_version = "3.10"
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
ignore_missing_imports = "True"

[tool.pytest.ini_options]
testpaths = [ "tests",]

[tool.coverage.report]
skip_empty = true

[tool.hatch.build.targets.wheel]
packages = [ "arcade_linkedin",]
