[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arcade_perplexity"
version = "0.1.0"
description = "Arcade.dev LLM tools for Perplexity Search"
requires-python = ">=3.10"
dependencies = [
    "arcade-mcp-server>=1.17.0,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
]
[[project.authors]]
name = "Arcade"
email = "dev@arcade.dev"

[project.scripts]
arcade-perplexity = "arcade_perplexity.__main__:main"
arcade_perplexity = "arcade_perplexity.__main__:main"

[project.optional-dependencies]
dev = [
    "arcade-mcp[all]>=1.4.0,<2.0.0",
    "pytest>=8.3.0,<8.4.0",
    "pytest-cov>=4.0.0,<4.1.0",
    "pytest-mock>=3.11.1,<3.12.0",
    "pytest-asyncio>=0.24.0,<0.25.0",
    "mypy>=1.5.1,<1.6.0",
    "pre-commit>=3.4.0,<3.5.0",
    "ruff>=0.7.4,<0.8.0",
    "respx>=0.21.0,<0.22.0",
]

# Tell Arcade.dev that this package is a toolkit
[project.entry-points.arcade_toolkits]
toolkit_name = "arcade_perplexity"

[tool.uv.sources]
arcade-mcp = { path = "../../", editable = true }
arcade-mcp-server = { path = "../../libs/arcade-mcp-server/", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.report]
skip_empty = true

[tool.mypy]
files = ["arcade_perplexity/**/*.py"]
python_version = "3.10"
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
ignore_missing_imports = "True"

[tool.hatch.build.targets.wheel]
packages = ["arcade_perplexity"]
