[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arcade_posthog"
version = "1.0.0"
description = "Arcade.dev LLM tools for PostHog analytics"
requires-python = ">=3.10"
dependencies = [
    "arcade-mcp-server>=1.17.0,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
    "arcade-posthog-api>=0.1.1,<1.0.0",
]

[[project.authors]]
name = "Arcade"
email = "dev@arcade.dev"

[project.scripts]
arcade-posthog = "arcade_posthog.__main__:main"
arcade_posthog = "arcade_posthog.__main__:main"

[project.optional-dependencies]
dev = [
    "arcade-mcp[all]>=1.4.0,<2.0.0",
    "pytest>=8.3.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.11.1",
    "mypy>=1.5.1",
    "pre-commit>=3.4.0",
    "ruff>=0.7.4",
]

[tool.uv.sources]
arcade-mcp = {path = "../../", editable = true}
arcade-mcp-server = { path = "../../libs/arcade-mcp-server/", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.report]
skip_empty = true

[tool.mypy]
files = ["arcade_posthog/**/*.py"]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.hatch.build.targets.wheel]
packages = ["arcade_posthog"]
