[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custom_server_with_prebuilt_tools"
version = "0.1.0"
description = "MCP Server created with Arcade.dev"
requires-python = ">=3.10"
dependencies = [
    "arcade-math>=1.0.5,<1.1.0",
    "local_filesystem>=0.1.0,<1.0.0",
    "arcade-mcp-server>=1.4.0,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "arcade-mcp[all]>=1.3.0,<2.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

# Tell Arcade.dev that this package has Arcade tools
[project.entry-points.arcade_toolkits]
toolkit_name = "custom_server_with_prebuilt_tools"

[tool.setuptools.packages.find]
include = ["custom_server_with_prebuilt_tools*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = false

[tool.uv.sources]
arcade-mcp = { path = "../../../", editable = true }
arcade-serve = { path = "../../../libs/arcade-serve/", editable = true }
arcade-mcp-server = { path = "../../../libs/arcade-mcp-server/", editable = true }
local_filesystem = { path = "../local_filesystem", editable = true }
