[project]
name = "logging"
version = "0.1.0"
description = "MCP Server created with Arcade.dev"
requires-python = ">=3.10"
dependencies = [
    "arcade-mcp-server>=1.4.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "arcade-mcp[all]>=1.3.0,<2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/logging"]
