[tool.poetry]
name = "{{ package_name }}"
version = "0.1.0"
description = "{{ toolkit_description }}"
authors = ["{{ toolkit_author_name }} <{{ toolkit_author_email }}>"]

[tool.poetry.dependencies]
python = "^3.10"
arcade-ai = "^0.1.*"

[tool.poetry.dev-dependencies]
pytest = "^8.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
