[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ toolkit_name }}"
version = "0.1.0"
description = "MCP toolkit created with Arcade"
requires-python = ">=3.10"
dependencies = [
    "arcade-mcp-server>={{ arcade_mcp_server_min_version }},<{{ arcade_mcp_server_max_version }}",
    "arcade-tdk>={{ arcade_tdk_min_version }},<{{ arcade_tdk_max_version }}",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

# Tell Arcade.dev that this package has Arcade tools
[project.entry-points.arcade_toolkits]
toolkit_name = "{{ toolkit_name }}"

[tool.setuptools.packages.find]
include = ["{{ toolkit_name }}*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = false
